--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
     "flowbite": "^3.1.2",
+    "googleapis": "^148.0.0",
     "motion": "^12.5.0",
     "mysql2": "^3.13.0",
+    "nodemailer": "^6.10.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.13",
     "ui-verse": "^0.1.5",
