--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "express-session": "^1.18.1",
     "flowbite": "^3.1.2",
     "googleapis": "^148.0.0",
+    "jsonwebtoken": "^9.0.2",
     "motion": "^12.5.0",
     "mysql2": "^3.13.0",
     "nodemailer": "^6.10.1",
+    "pdfkit": "^0.17.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.13",
     "ui-verse": "^0.1.5",
